Start analysis of new datasets

--- a/python/FlyingAnalysis.ipynb
+++ b/python/FlyingAnalysis.ipynb
@@ -84,7 +84,7 @@
     "    return fig, axs\n",
     "\n",
     "def plot_audio(row, mic_idx=0):\n",
-    "    all_frequencies = np.unique(row.frequencies_matrix)\n",
+    "    all_frequencies = row.freqs\n",
     "    spec = row.spectrogram[:, mic_idx, :]\n",
     "    spec[spec == 0] = np.nan\n",
     "    total = np.nanmean(np.abs(spec), axis=1)\n",
@@ -110,8 +110,8 @@
     "    \n",
     "    xticks = np.arange(0, row.seconds.max(), step=5)\n",
     "    ax.set_xticks(xticks); ax.set_xticklabels(xticks)\n",
-    "    yticks = np.arange((np.round(row.frequencies_matrix.min()//1000)+1)*1000, \n",
-    "                       row.frequencies_matrix.max(), step=1000)\n",
+    "    yticks = np.arange((np.round(row.freqs.min()//1000)+1)*1000, \n",
+    "                        row.freqs.max(), step=1000)\n",
     "    ax.set_yticks(yticks); ax.set_yticklabels(yticks)\n",
     "    ax.set_ylabel('frequency [Hz]')\n",
     "    ax.set_xlabel('seconds [s]')\n",
@@ -167,7 +167,10 @@
     "#exp_name = '2020_12_18_flying'; appendix=\"_new\"; distance = 0\n",
     "#exp_name = '2021_03_01_flying';\n",
     "#exp_name = '2021_04_30_hover';\n",
-    "exp_name = '2021_05_04_flying';\n",
+    "#exp_name = '2021_05_04_flying';\n",
+    "#exp_name = '2021_07_14_propsweep';\n",
+    "#exp_name = '2021_07_14_flying';\n",
+    "exp_name = '2021_07_14_flying_hover';\n",
     "fname = f'../experiments/{exp_name}/all_data.pkl'\n",
     "\n",
     "try:\n",
@@ -209,11 +212,12 @@
    },
    "outputs": [],
    "source": [
-    "min_time = None\n",
-    "max_time = None\n",
+    "min_time = None #4 #None\n",
+    "max_time = None #14 #None\n",
     "max_dist = None\n",
     "\n",
-    "starting_distance = 65.63 # 42+29.7−6.07 \n",
+    "#starting_distance = 65.63 # 42+29.7−6.07 \n",
+    "starting_distance = 130\n",
     "\n",
     "fig_total, ax_total = plt.subplots()\n",
     "fig_total.set_size_inches(3, 3)\n",
@@ -222,17 +226,21 @@
     "    \n",
     "    x = row.positions[:, 0] * 100\n",
     "    y = row.positions[:, 1] * 100 - starting_distance\n",
-    "    #mask1 = y < -50\n",
-    "    mask2 = (y > -60) & (y < -30)\n",
-    "    mask3 = y > -30\n",
-    "    for mask in [mask2, mask3]:\n",
+    "    \n",
+    "    x = x[~np.isnan(x)]\n",
+    "    y = y[~np.isnan(y)]\n",
+    "    \n",
+    "    mask2 = (y > -130) & (y < -100)\n",
+    "    mask3 = (y > -100) & (y < -70)\n",
+    "    mask4 = (y > -70)\n",
+    "    for mask in [mask2, mask3, mask4]:\n",
     "        ax_total.scatter(x[mask], y[mask], s=10.0)\n",
     "    #save_fig(fig, f'plots/experiments/{exp_name}{row.appendix}_movement', extension='.png')\n",
     "ax_total.axis('equal')\n",
     "ax_total.set_xlabel('x [cm]')\n",
     "ax_total.set_ylabel('y [cm]')\n",
     "ax_total.axhline(0, color='k', label='wall')\n",
-    "save_fig(fig_total, f'plots/experiments/{exp_name}_pos.png')"
+    "#save_fig(fig_total, f'plots/experiments/{exp_name}_pos.png')"
    ]
   },
   {
@@ -252,16 +260,24 @@
    "source": [
     "from frequency_analysis import add_spectrogram\n",
     "\n",
-    "df_total = df_total.assign(spectrogram=None)\n",
+    "df_total = df_total.assign(spectrogram=None,freqs=None)\n",
     "df_total = df_total.apply(add_spectrogram, axis=1)\n",
     "\n",
     "mic_idx = 0\n",
     "\n",
     "#maxi = np.nanmax(np.concatenate([*dfs.spectrogram], axis=1))\n",
     "for i_col, row in df_total.iterrows():\n",
+    "    \n",
+    "    #complicated spectrogram\n",
     "    fig, ax = plot_audio(row, mic_idx=mic_idx)\n",
-    "    ax.set_ylim([2800, 5000])\n",
-    "    #save_fig(fig, f'plots/experiments/{exp_name}{row.appendix}_spec')"
+    "    #ax.set_ylim([2800, 5000])\n",
+    "    #save_fig(fig, f'plots/experiments/{exp_name}{row.appendix}_spec')\n",
+    "    \n",
+    "    #if not row.appendix in [\"_bin5_thirdtry\", \"_bin6\"]:\n",
+    "    #    continue\n",
+    "    #fig, ax = plt.subplots()\n",
+    "    #ax.pcolorfast(row.seconds, row.freqs, np.log10(np.abs(row.spectrogram[:-1, mic_idx, :-1])))\n",
+    "    #ax.set_title(row.appendix)"
    ]
   },
   {
@@ -283,7 +299,8 @@
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(10, 5)\n",
     "calib_function, calib_freq = get_calibration_function_median(\n",
-    "    \"2021_04_30_stepper\", \"audio_deck\", ax=ax, #fit_one_gain=True \n",
+    "    #\"2021_04_30_stepper\", \"audio_deck\", ax=ax, #fit_one_gain=True \n",
+    "    \"2021_07_08_stepper_fast\", \"audio_deck\", ax=ax, snr=5#fit_one_gain=True \n",
     ")\n",
     "inf_machine = Inference()\n",
     "inf_machine.add_calibration_function(calib_function)"
@@ -297,7 +314,6 @@
    "source": [
     "from dataset_parameters import kwargs_datasets\n",
     "from crazyflie_description_py.experiments import WALL_ANGLE_DEG\n",
-    "\n",
     "\n",
     "kwargs = kwargs_datasets[exp_name][\"audio_deck\"]\n",
     "azimuth_deg = WALL_ANGLE_DEG\n",
@@ -340,8 +356,8 @@
     "f_calib_all = calib_function(freqs_calib)\n",
     "\n",
     "\n",
-    "for chosen_mics in [None, [0], [2], [1, 3], [0, 1], [0, 3], [0, 1, 3]]:\n",
-    "    nominal_distances = cycle([60 - i * 20 for i in range(3)])  # [60, 40, 20]\n",
+    "for chosen_mics in [None]:#, [0], [2], [1, 3], [0, 1], [0, 3], [0, 1, 3]]:\n",
+    "    nominal_distances = cycle([starting_distance - i * 20 for i in range(3)])  # [60, 40, 20]\n",
     "    \n",
     "    plot_idx = 0\n",
     "    fig_df, ax_df = plot_df(distance_range)\n",
@@ -352,8 +368,10 @@
     "    mean_distances = []\n",
     "    count = 0\n",
     "\n",
+    "    print(df_total)\n",
     "\n",
     "    for i_row, row in df_total.iterrows():\n",
+    "        print(row)\n",
     "        data_collector = DataCollector(exp_name=exp_name)\n",
     "\n",
     "        for i in range(row.stft.shape[0]):\n",
@@ -362,10 +380,14 @@
     "\n",
     "            if i == row.stft.shape[0] - 1:\n",
     "                sweep_complete = True\n",
+    "                print('done')\n",
     "            elif i == 0:\n",
     "                sweep_complete = False\n",
     "            else:\n",
-    "                sweep_complete = data_collector.next_fslice_ready(signals_f, frequencies)\n",
+    "                if row.bin_selection < 5:\n",
+    "                    sweep_complete = data_collector.next_fslice_ready(signals_f, frequencies)\n",
+    "                else:\n",
+    "                    sweep_complete = True\n",
     "\n",
     "            if sweep_complete:\n",
     "                print(\"treating new frequency slice after\", count)\n",
@@ -419,7 +441,6 @@
     "                        axs[0, i_mic].set_title(f\"mic{i_mic}\")\n",
     "\n",
     "                # treat measured data\n",
-    "\n",
     "                for i_mic in range(f_slice.shape[0]):\n",
     "                    dists, proba, diff = inf_machine.do_inference(\n",
     "                        mic_idx=i_mic, algorithm=algorithm, normalize=normalize\n",
@@ -563,14 +584,15 @@
     "                            freqs_calib, f_calib_all[i_mic], label=f\"calib\", ls=\":\"\n",
     "                        )\n",
     "\n",
+    "            mode = \"maximum\" if row.bin_selection < 5 else \"all\"\n",
     "            data_collector.fill_from_signal(\n",
     "                signals_f,\n",
     "                frequencies,\n",
     "                distance_cm=row.positions[i, 1] * 1e2,\n",
     "                time=row.seconds[i],\n",
+    "                mode=mode\n",
     "            )\n",
     "            count += 1\n",
-    "\n",
     "\n",
     "    # sort subplots according to distance\n",
     "    axs_all = change_order(axs_all, mean_distances)\n",
