--- a/python/WallAnalysis.ipynb
+++ b/python/WallAnalysis.ipynb
@@ -106,7 +106,7 @@
     "\n",
     "mic_type = \"audio_deck\"\n",
     "motors = 0 #\"all45000\"\n",
-    "snr = 6"
+    "snr = 5"
    ]
   },
   {
@@ -204,12 +204,11 @@
     "\n",
     "fig, ax_all = plt.subplots()\n",
     "for mic_idx in range(4):\n",
-    "    fig, ax = plt.subplots()\n",
-    "    \n",
-    "    im = pcolorfast_custom(ax, df_dist, df_freq_raw, df_matrix_raw[mic_idx])\n",
+    "    #fig, ax = plt.subplots()\n",
+    "    #im = pcolorfast_custom(ax, df_dist, df_freq_raw, df_matrix_raw[mic_idx])\n",
     "    #im = ax.pcolormesh(df_dist, df_freq_raw, df_matrix_raw[mic_idx])\n",
-    "    ax.set_title(f\"mic{mic_idx} original\")\n",
-    "    add_colorbar(fig, ax, im)\n",
+    "    #ax.set_title(f\"mic{mic_idx} original\")\n",
+    "    #add_colorbar(fig, ax, im)\n",
     "    fig, ax = plt.subplots()\n",
     "    im = pcolorfast_custom(ax, df_dist, df_freq, df_matrix[mic_idx])\n",
     "    ax.set_title(f\"mic{mic_idx} pruned\")\n",
@@ -424,7 +423,8 @@
     "    fig.suptitle(titles[algo])\n",
     "    axs[0, 1].set_xlim(0,  45)\n",
     "    axs[0, 0].set_ylim(-45,  45)\n",
-    "    save_fig(fig, f'{plot_dir}/{fname}_{algo}_distance_slice_performance.pdf')\n",
+    "    #save_fig(fig, f'{plot_dir}/{fname}_{algo}_distance_slice_performance.pdf')\n",
+    "    break\n",
     "\n",
     "ax_total.legend()"
    ]
@@ -520,7 +520,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
