Change snr naming

--- a/python/WallAnalysis.ipynb
+++ b/python/WallAnalysis.ipynb
@@ -50,7 +50,7 @@
     "plot_dir = 'plots/experiments'\n",
     "\n",
     "distance = 15\n",
-    "azimuth_deg = WALL_ANGLE_DEG_STEPPER #- 180\n",
+    "azimuth_deg = 0 #WALL_ANGLE_DEG_STEPPER #- 180\n",
     "\n",
     "context = Context.get_crazyflie_setup()\n",
     "context.plot()\n",
