Working evaluation of 07_08 stepper fast and slow stepper datsaets

--- a/python/WallAnalysis.ipynb
+++ b/python/WallAnalysis.ipynb
@@ -50,7 +50,7 @@
     "plot_dir = 'plots/experiments'\n",
     "\n",
     "distance = 15\n",
-    "azimuth_deg = 0 #WALL_ANGLE_DEG_STEPPER #- 180\n",
+    "azimuth_deg = WALL_ANGLE_DEG_STEPPER #- 180\n",
     "\n",
     "context = Context.get_crazyflie_setup()\n",
     "context.plot()\n",
@@ -99,6 +99,7 @@
     "#exp_name = \"2021_07_07_stepper\"; # new sweep, better pipeline\n",
     "#exp_name = \"2021_07_08_stepper\"; # new sweep, better pipeline\n",
     "exp_name = \"2021_07_08_stepper_fast\"; # new sweep, better pipeline\n",
+    "#exp_name = \"2021_07_08_stepper_slow\"; # new sweep, better pipeline\n",
     "#exp_name = \"2021_03_01_flying\"\n",
     "# exp_name = '2020_12_9_rotating';\n",
     "# exp_name = '2020_11_26_wall';\n",
@@ -355,76 +356,76 @@
     "ax_total.set_ylabel('probability')\n",
     "ax_total.set_title('combined distribution across mics and frequencies')\n",
     "\n",
-    "for algo in [\"cost\", \"bayes\"]:\n",
+    "#for algo in [\"bayes\"]#[\"cost\", \"bayes\"]:\n",
+    "algo = \"bayes\"\n",
     "    \n",
-    "    estimator_all = AngleEstimator()\n",
+    "estimator_all = AngleEstimator()\n",
     "\n",
-    "    labels = [\"all mics\"] + [f\"mic{m}\" for m in range(df_matrix.shape[0])] \n",
-    "    err_dict = {l: [np.nan]*len(df_freq) for l in labels}\n",
-    "    for i, f in enumerate(df_freq):\n",
-    "        estimator = AngleEstimator()\n",
-    "        \n",
-    "        d_slices = fill_nans(df_matrix[:, i, :], df_dist)\n",
+    "labels = [\"all mics\"] + [f\"mic{m}\" for m in range(df_matrix.shape[0])] \n",
+    "err_dict = {l: [np.nan]*len(df_freq) for l in labels}\n",
+    "for i, f in enumerate(df_freq):\n",
+    "    estimator = AngleEstimator()\n",
+    "\n",
+    "    d_slices = fill_nans(df_matrix[:, i, :], df_dist)\n",
+    "\n",
+    "    if plot_slices:\n",
+    "        fig, ax = plt.subplots()\n",
+    "        fig.set_size_inches(7, 5)\n",
+    "    for mic_idx in range(df_matrix.shape[0]):\n",
+    "        d_slice = d_slices[mic_idx]\n",
+    "\n",
+    "        if algo == \"bayes\":\n",
+    "            ratios, prob_ratios = get_approach_angle_fft(d_slice, f, df_dist,\n",
+    "                                                 n_max=1000, bayes=True, reduced=False)\n",
+    "\n",
+    "            gammas, prob = get_gamma_distribution(ratios, \n",
+    "                                                  prob_ratios, \n",
+    "                                                  factor=factor)\n",
+    "                                                  #factors[mic_idx])\n",
+    "\n",
+    "        elif algo == \"cost\":\n",
+    "            prob = get_approach_angle_cost(\n",
+    "                d_slice,\n",
+    "                f,\n",
+    "                df_dist,\n",
+    "                start_distances_grid,\n",
+    "                gammas_grid,\n",
+    "                mic_idx=mic_idx,\n",
+    "                azimuth_deg=azimuth_deg\n",
+    "            )  # is of shape n_start_distances x n_gammas_grid\n",
+    "            gammas = gammas_grid\n",
+    "\n",
+    "        estimator_all.add_distribution(gammas, prob, mic_idx, f)\n",
+    "        estimator.add_distribution(gammas, prob, mic_idx, f)\n",
+    "\n",
+    "        gamma = get_estimate(gammas, prob)\n",
+    "        err_dict[f\"mic{mic_idx}\"][i] = gamma - gt_gamma\n",
     "\n",
     "        if plot_slices:\n",
-    "            fig, ax = plt.subplots()\n",
-    "            fig.set_size_inches(7, 5)\n",
-    "        for mic_idx in range(df_matrix.shape[0]):\n",
-    "            d_slice = d_slices[mic_idx]\n",
+    "            ax.plot(gammas, prob)\n",
+    "            ax.axvline(gamma, label=f'mic{mic_idx}, {algo}', color=f'C{mic_idx}', ls=linestyles[algo])\n",
     "\n",
-    "            if algo == \"bayes\":\n",
-    "                ratios, prob_ratios = get_approach_angle_fft(d_slice, f, df_dist,\n",
-    "                                                     n_max=1000, bayes=True, reduced=False)\n",
+    "    if plot_slices:\n",
+    "        ax.set_title(f'frequency {f:.0f}Hz')\n",
+    "        ax.set_xlabel('angle of approach $\\\\gamma$ [deg]')\n",
+    "        ax.set_ylabel('probability')\n",
+    "        ax.legend()\n",
     "\n",
-    "                gammas, prob = get_gamma_distribution(ratios, \n",
-    "                                                      prob_ratios, \n",
-    "                                                      factor=factor)\n",
-    "                                                      #factors[mic_idx])\n",
-    "                \n",
-    "            elif algo == \"cost\":\n",
-    "                prob = get_approach_angle_cost(\n",
-    "                    d_slice,\n",
-    "                    f,\n",
-    "                    df_dist,\n",
-    "                    start_distances_grid,\n",
-    "                    gammas_grid,\n",
-    "                    mic_idx=mic_idx,\n",
-    "                    azimuth_deg=azimuth_deg\n",
-    "                )  # is of shape n_start_distances x n_gammas_grid\n",
-    "                gammas = gammas_grid\n",
-    "                \n",
-    "            estimator_all.add_distribution(gammas, prob, mic_idx, f)\n",
-    "            estimator.add_distribution(gammas, prob, mic_idx, f)\n",
-    "                \n",
-    "            gamma = get_estimate(gammas, prob)\n",
-    "            err_dict[f\"mic{mic_idx}\"][i] = gamma - gt_gamma\n",
+    "    angles, prob = estimator.get_angle_distribution()\n",
+    "    gamma = get_estimate(angles, prob)\n",
+    "    err_dict[\"all mics\"][i] = gamma - gt_gamma\n",
     "\n",
-    "            if plot_slices:\n",
-    "                ax.plot(gammas, prob)\n",
-    "                ax.axvline(gamma, label=f'mic{mic_idx}, {algo}', color=f'C{mic_idx}', ls=linestyles[algo])\n",
     "\n",
-    "        if plot_slices:\n",
-    "            ax.set_title(f'frequency {f:.0f}Hz')\n",
-    "            ax.set_xlabel('angle of approach $\\\\gamma$ [deg]')\n",
-    "            ax.set_ylabel('probability')\n",
-    "            ax.legend()\n",
-    "            \n",
-    "        angles, prob = estimator.get_angle_distribution()\n",
-    "        gamma = get_estimate(angles, prob)\n",
-    "        err_dict[\"all mics\"][i] = gamma - gt_gamma\n",
-    "            \n",
-    "    \n",
-    "    angles, prob = estimator_all.get_angle_distribution()\n",
-    "    ax_total.plot(angles, prob, label=algo)\n",
+    "angles, prob = estimator_all.get_angle_distribution()\n",
+    "ax_total.plot(angles, prob, label=algo)\n",
     "\n",
-    "    fname = f\"{exp_name}_{motors}\"\n",
-    "    fig, axs = plot_performance(err_dict, xs=df_freq, \n",
-    "               xlabel=\"frequency [Hz]\", ylabel=\"error [deg]\")\n",
-    "    fig.suptitle(titles[algo])\n",
-    "    axs[0, 1].set_xlim(0,  45)\n",
-    "    axs[0, 0].set_ylim(-45,  45)\n",
-    "    #save_fig(fig, f'{plot_dir}/{fname}_{algo}_distance_slice_performance.pdf')\n",
-    "    break\n",
+    "fname = f\"{exp_name}_{motors}\"\n",
+    "fig, axs = plot_performance(err_dict, xs=df_freq, \n",
+    "           xlabel=\"frequency [Hz]\", ylabel=\"error [deg]\")\n",
+    "fig.suptitle(titles[algo])\n",
+    "axs[0, 1].set_xlim(0,  45)\n",
+    "axs[0, 0].set_ylim(-45,  45)\n",
+    "#save_fig(fig, f'{plot_dir}/{fname}_{algo}_distance_slice_performance.pdf')\n",
     "\n",
     "ax_total.legend()"
    ]
@@ -598,114 +599,104 @@
    "outputs": [],
    "source": [
     "from inference import get_probability_cost, get_probability_bayes, eps_normalize\n",
+    "from inference import Inference\n",
+    "from calibration import get_calibration_function_median\n",
     "from simulation import get_freq_slice_theory\n",
     "from estimators import DistanceEstimator, get_estimate\n",
     "import progressbar\n",
     "\n",
-    "EPS = 1e-10 # clip probability distribution at this value\n",
-    "err_df = pd.DataFrame(columns=['method', 'mic', 'distance', 'error', 'algorithm'])\n",
+    "EPS = 1e-10  # clip probability distribution at this value\n",
+    "err_df = pd.DataFrame(\n",
+    "    columns=['method', 'mic', 'distance', 'error', 'algorithm'])\n",
+    "\n",
+    "inf_machine = Inference()\n",
+    "inf_machine.add_geometry([min(df_dist), max(df_dist)], azimuth_deg)\n",
     "\n",
     "distances_grid = np.arange(min(df_dist), max(df_dist))\n",
     "distances = df_dist\n",
     "mic_indices = range(4)\n",
     "n_mics = len(mic_indices)\n",
     "\n",
-    "use_uniform_prior = False #True #False\n",
+    "use_uniform_prior = False  #True #False\n",
     "\n",
     "distances_m = np.arange(50) * 1e-2\n",
     "distance_estimators = {}\n",
     "\n",
     "with progressbar.ProgressBar(max_value=len(distances)) as p:\n",
     "    for i_d, distance in enumerate(distances):\n",
-    "        \n",
-    "        distance_estimators = {\n",
-    "            k: DistanceEstimator() for k in method_dict.keys()\n",
-    "        }\n",
-    "        \n",
-    "        p.update(i_d)\n",
-    "        for i_mic, mic_idx in enumerate(mic_indices):\n",
-    "            for method, normalize_method in method_dict.items():\n",
-    "                #df = results.loc[results.normalization == method]\n",
-    "                \n",
-    "                if method == \"theoretical\": \n",
-    "                    slice_exp = get_freq_slice_theory(df_freq, distance, chosen_mics=[mic_idx], \n",
-    "                                                      azimuth_deg=azimuth_deg)\n",
-    "                    slice_exp = slice_exp[:, 0]\n",
-    "                    std = None #1\n",
-    "                else:\n",
-    "                    slice_exp, freqs, stds = data_collector.get_frequency_slice_fixed(\n",
-    "                        df_freq, distance, mics=[mic_idx], normalize_method=normalize_method\n",
-    "                    )\n",
-    "                    slice_exp = slice_exp[0]\n",
-    "                    std = None #stds[0]\n",
-    "                    \n",
-    "                proba_cost = get_probability_cost(\n",
-    "                    slice_exp, freqs, \n",
-    "                    distances_grid, mic_idx=mic_idx,\n",
-    "                    azimuth_deg=azimuth_deg\n",
-    "                )\n",
-    "                distances_bayes, proba_bayes, diff_bayes = get_probability_bayes(\n",
-    "                    slice_exp,\n",
-    "                    freqs, \n",
-    "                    mic_idx=mic_idx,\n",
-    "                    distance_range=[min(distances_grid), max(distances_grid)],\n",
-    "                    sigma=std,\n",
-    "                    azimuth_deg=azimuth_deg\n",
-    "                )\n",
-    "                \n",
-    "                proba_bayes_norm = eps_normalize(proba_bayes, EPS)\n",
-    "                distance_estimators[method].add_distribution(\n",
-    "                    diff_bayes * 1e-2, \n",
-    "                    proba_bayes_norm, \n",
-    "                    mic_idx\n",
-    "                )\n",
     "\n",
-    "                for algo, proba, distances_here in zip(\n",
-    "                    [\"cost\", \"bayes\"],\n",
-    "                    [proba_cost, proba_bayes],\n",
-    "                    [distances_grid, distances_bayes],\n",
-    "                ):\n",
+    "        distance_estimators = {\n",
+    "            k: DistanceEstimator()\n",
+    "            for k in method_dict.keys()\n",
+    "        }\n",
+    "\n",
+    "        p.update(i_d)\n",
+    "        for method, normalize_method in method_dict.items():\n",
+    "            if method == \"theoretical\":\n",
+    "                slice_exp = get_freq_slice_theory(df_freq,\n",
+    "                                                  distance,\n",
+    "                                                  chosen_mics=mic_indices,\n",
+    "                                                  azimuth_deg=azimuth_deg)\n",
+    "                slice_exp = slice_exp.T # now it's 4x32\n",
+    "                freqs = df_freq\n",
+    "            else:\n",
+    "                slice_exp, freqs, stds = data_collector.get_frequency_slice_fixed(\n",
+    "                    df_freq,\n",
+    "                    distance,\n",
+    "                    mics=mic_indices)\n",
+    "                \n",
+    "            inf_machine.add_data(slice_exp, df_freq)\n",
+    "            inf_machine.filter_out_freqs([[0, 2995], [3630, 3870], [4445, 5000]])\n",
+    "\n",
+    "            inf_machine.add_calibration_function(normalize_method)\n",
+    "                \n",
+    "            for mic_idx in mic_indices:\n",
+    "                distances_bayes, proba_bayes_norm, diff_bayes = inf_machine.do_inference(algorithm=\"bayes\", mic_idx=mic_idx)\n",
+    "                \n",
+    "                for algo in [\"cost\", \"bayes\"]:\n",
+    "                    distances_here, proba, diff = inf_machine.do_inference(algorithm=algo, mic_idx=mic_idx)\n",
     "                    d = get_estimate(distances_here, proba)\n",
     "                    err_df.loc[len(err_df), :] = {\n",
     "                        'error': d - distance,\n",
     "                        'mic': mic_idx,\n",
     "                        'distance': distance,\n",
-    "                        'method': method, \n",
+    "                        'method': method,\n",
     "                        'algorithm': algo\n",
     "                    }\n",
-    "                    \n",
+    "                    if algo == \"bayes\":\n",
+    "                        distance_estimators[method].add_distribution(\n",
+    "                            diff * 1e-2, proba, mic_idx)\n",
+    "\n",
     "        for method, distance_estimator in distance_estimators.items():\n",
-    "            \n",
     "            azimuth_deg_here = None if use_uniform_prior else azimuth_deg\n",
     "            distances_here, proba = distance_estimator.get_distance_distribution(\n",
     "                method='sum',\n",
     "                distances_m=distances_m,\n",
-    "                azimuth_deg=azimuth_deg_here\n",
-    "            )\n",
+    "                azimuth_deg=azimuth_deg_here)\n",
     "            d = get_estimate(distances_here, proba) * 1e2\n",
     "            err_df.loc[len(err_df), :] = {\n",
     "                'error': d - distance,\n",
     "                'mic': 'all',\n",
     "                'distance': distance,\n",
-    "                'method': method, \n",
-    "                'algorithm': 'bayes-combination' \n",
+    "                'method': method,\n",
+    "                'algorithm': 'bayes-combination'\n",
     "            }\n",
-    "            \n",
-    "            distance_m_here = None if use_uniform_prior else distance*1e-2\n",
+    "\n",
+    "            distance_m_here = None if use_uniform_prior else distance * 1e-2\n",
     "            angles_here, proba = distance_estimator.get_angle_distribution(\n",
     "                method='sum',\n",
     "                distance_estimate_m=distance_m_here,\n",
-    "                azimuths_deg=np.arange(360)\n",
-    "            )\n",
+    "                azimuths_deg=np.arange(360))\n",
     "            a = get_estimate(angles_here, proba)\n",
-    "            #print(method, distance, a, azimuth_deg)\n",
-    "            error = np.diff(np.unwrap([a/180*np.pi, azimuth_deg/180*np.pi])) * 180/np.pi\n",
+    "            error = np.diff(\n",
+    "                np.unwrap([a / 180 * np.pi, azimuth_deg / 180 * np.pi\n",
+    "                           ])) * 180 / np.pi\n",
     "            err_df.loc[len(err_df), :] = {\n",
     "                'error': error[0],\n",
     "                'mic': 'all',\n",
     "                'distance': distance,\n",
-    "                'method': method, \n",
-    "                'algorithm': 'bayes-combination-angle' \n",
+    "                'method': method,\n",
+    "                'algorithm': 'bayes-combination-angle'\n",
     "            }\n",
     "err_df = err_df.apply(pd.to_numeric, axis=0, errors='ignore')"
    ]
