Finish first flying analysis

--- a/python/WallAnalysis.ipynb
+++ b/python/WallAnalysis.ipynb
@@ -646,8 +646,7 @@
     "                    mics=mic_indices)\n",
     "                \n",
     "            inf_machine.add_data(slice_exp, df_freq)\n",
-    "            inf_machine.filter_out_freqs([[0, 2995], [3630, 3870], [4445, 5000]])\n",
-    "\n",
+    "            inf_machine.filter_out_freqs()\n",
     "            inf_machine.add_calibration_function(normalize_method)\n",
     "                \n",
     "            for mic_idx in mic_indices:\n",
