--- a/python/FlyingAnalysis.ipynb
+++ b/python/FlyingAnalysis.ipynb
@@ -232,7 +232,7 @@
     "max_dist = None\n",
     "\n",
     "#starting_distance = 65.63 # 42+29.7−6.07 \n",
-    "starting_distance = 130\n",
+    "starting_distance = 100\n",
     "\n",
     "fig_total, ax_total = plt.subplots()\n",
     "fig_total.set_size_inches(3, 3)\n",
@@ -249,16 +249,19 @@
     "    x = x[z[~np.isnan(z)] > MIN_Z_CM]\n",
     "    y = y[z[~np.isnan(z)] > MIN_Z_CM]\n",
     "    \n",
-    "    mask2 = (y > -130) & (y < -100)\n",
-    "    mask3 = (y > -100) & (y < -70)\n",
-    "    mask4 = (y > -70)\n",
-    "    for mask in [mask2, mask3, mask4]:\n",
-    "        ax_total.scatter(x[mask], y[mask], s=10.0)\n",
+    "    #ax_total.scatter(x, y, s=10.0, label=row.appendix)\n",
+    "    ax_total.plot(x, y, marker='o', label=row.appendix.replace('_', ''))\n",
+    "    #mask2 = (y > -130) & (y < -100)\n",
+    "    #mask3 = (y > -100) & (y < -70)\n",
+    "    #mask4 = (y > -70)\n",
+    "    #for mask in [mask2, mask3, mask4]:\n",
+    "    #    ax_total.scatter(x[mask], y[mask], s=10.0)\n",
     "    #save_fig(fig, f'plots/experiments/{exp_name}{row.appendix}_movement', extension='.png')\n",
     "ax_total.axis('equal')\n",
     "ax_total.set_xlabel('x [cm]')\n",
     "ax_total.set_ylabel('y [cm]')\n",
     "ax_total.axhline(0, color='k', label='wall')\n",
+    "ax_total.legend(bbox_to_anchor=[1.0, 1.0], loc='upper left')\n",
     "#save_fig(fig_total, f'plots/experiments/{exp_name}_pos.png')"
    ]
   },
@@ -664,7 +667,8 @@
     "kwargs = kwargs_datasets[exp_name][\"audio_deck\"]\n",
     "azimuth_deg = WALL_ANGLE_DEG\n",
     "\n",
-    "distance_range = [7, 75]\n",
+    "plot_distance_cm = 50\n",
+    "distance_range = [7, plot_distance_cm]\n",
     "freq_range = [kwargs[\"min_freq\"], kwargs[\"max_freq\"]]\n",
     "inf_machine.add_geometry(distance_range, azimuth_deg)"
    ]
@@ -686,8 +690,7 @@
     "from itertools import cycle\n",
     "\n",
     "starting_distance = 100\n",
-    "plot_distance_cm = 60\n",
-    "plot_raw = True\n",
+    "plot_raw = False\n",
     "eps = 1e-5  # for plotting only\n",
     "algorithm = \"bayes\"\n",
     "normalize = True  # normalize probas before combining\n",
@@ -701,164 +704,162 @@
     "# 11-13: slow\n",
     "# 14-16: fast, no recording\n",
     "# 17-19: fast\n",
-    "row = df_total.loc[df_total.appendix == \"_17\"].iloc[0]\n",
+    "for i_row, row in df_total.iterrows():\n",
+    "#row = df_total.loc[df_total.appendix == \"_18\"].iloc[0]\n",
     "\n",
-    "for chosen_mics in [None]:  # , [0], [2], [1, 3], [0, 1], [0, 3], [0, 1, 3]]:\n",
-    "    data_collector = DataCollector(exp_name=exp_name)\n",
+    "    fig_df, ax_df = plot_df([7, plot_distance_cm])\n",
     "\n",
     "    mean_distances = starting_distance - row.positions[:, 1] * 1e2\n",
     "    flying_time_indices = np.where(\n",
     "        (row.positions[:, 2] * 1e2 > MIN_Z_CM) & (mean_distances < plot_distance_cm)\n",
+    "        & np.r_[1, mean_distances[:-1] - mean_distances[1:] > 0]\n",
     "    )[0]\n",
     "\n",
-    "    fig_df, ax_df = plot_df(distance_range)\n",
-    "    fig_all, axs_all = plt.subplots(1, len(flying_time_indices))\n",
-    "    fig_all.set_size_inches(15, 3)\n",
+    "    for chosen_mics in [None]:#, [0], [2], [1, 3], [0, 1], [0, 3], [0, 1, 3]]:\n",
+    "        print(f'using mics {chosen_mics}...')\n",
+    "        data_collector = DataCollector(exp_name=exp_name)\n",
     "\n",
-    "    for plot_idx, i in enumerate(flying_time_indices):\n",
-    "        signals_f = row.stft[i]\n",
-    "        frequencies = row.frequencies_matrix[i]\n",
-    "        distance_cm = mean_distances[i] \n",
+    "        fig_all, axs_all = plt.subplots(1, len(flying_time_indices))\n",
+    "        fig_all.set_size_inches(15, 3)\n",
+    "        fig_all.suptitle(f'mics: {chosen_mics}')\n",
     "\n",
-    "        data_collector.fill_from_signal(\n",
-    "            signals_f,\n",
-    "            frequencies,\n",
-    "            distance_cm=row.positions[i, 1] * 1e2,\n",
-    "            time=row.seconds[i],\n",
-    "            mode=\"all\",\n",
-    "        )\n",
+    "        for plot_idx, i in enumerate(flying_time_indices):\n",
+    "            signals_f = row.stft[i]\n",
+    "            frequencies = row.frequencies_matrix[i]\n",
+    "            distance_cm = mean_distances[i] \n",
     "\n",
-    "        (f_slice, freqs, stds, distances,) = data_collector.get_current_frequency_slice(\n",
-    "            verbose=False\n",
-    "        )\n",
+    "            data_collector.fill_from_signal(\n",
+    "                signals_f,\n",
+    "                frequencies,\n",
+    "                distance_cm=row.positions[i, 1] * 1e2,\n",
+    "                time=row.seconds[i],\n",
+    "                mode=\"all\",\n",
+    "            )\n",
     "\n",
-    "        inf_machine.add_data(deepcopy(f_slice), freqs, stds)\n",
-    "        inf_machine.filter_out_freqs()\n",
-    "        inf_machine.calibrate()\n",
+    "            (f_slice, freqs, stds, distances,) = data_collector.get_current_frequency_slice(\n",
+    "                verbose=False\n",
+    "            )\n",
     "\n",
-    "        if plot_raw:\n",
-    "            fig, axs = plt.subplots(3, row.stft.shape[1])  # , sharey='row')\n",
-    "            fig.set_size_inches(15, 10)\n",
-    "            fig.suptitle(f\"{distance_cm:.0f}cm\", y=0.9)\n",
+    "            inf_machine.add_data(deepcopy(f_slice), freqs, stds)\n",
+    "            inf_machine.filter_out_freqs()\n",
+    "            inf_machine.calibrate()\n",
     "\n",
-    "        # raw data, for plotting only\n",
-    "        freqs = inf_machine.values[inf_machine.valid_idx]\n",
-    "        f_slice = f_slice[:, inf_machine.valid_idx]\n",
+    "            if plot_raw:\n",
+    "                fig, axs = plt.subplots(3, row.stft.shape[1])  # , sharey='row')\n",
+    "                fig.set_size_inches(15, 10)\n",
+    "                fig.suptitle(f\"{distance_cm:.0f}cm\", y=0.9)\n",
     "\n",
-    "        distance_corr = [distance_cm] * len(freqs)\n",
-    "        ax_df.scatter(distance_corr, freqs, color=f\"C{plot_idx}\")\n",
+    "            # raw data, for plotting only\n",
+    "            freqs = inf_machine.values[inf_machine.valid_idx]\n",
+    "            f_slice = f_slice[:, inf_machine.valid_idx]\n",
     "\n",
-    "        distance_estimators = {\n",
-    "            \"measured\": DistanceEstimator(),\n",
-    "            \"theo\": DistanceEstimator(),\n",
-    "        }\n",
+    "            distance_corr = [distance_cm] * len(freqs)\n",
+    "            ax_df.scatter(distance_corr, freqs, color=f\"C{plot_idx}\")\n",
     "\n",
-    "        if plot_raw:\n",
+    "            distance_estimators = {\n",
+    "                \"measured\": DistanceEstimator(),\n",
+    "                \"theo\": DistanceEstimator(),\n",
+    "            }\n",
+    "\n",
+    "            if plot_raw:\n",
+    "                for i_mic in range(f_slice.shape[0]):\n",
+    "                    axs[0, i_mic].plot(\n",
+    "                        freqs, \n",
+    "                        f_slice[i_mic], \n",
+    "                        label=\"measured\",\n",
+    "                        color=f\"C{plot_idx}\"\n",
+    "                    )\n",
+    "                    axs[0, i_mic].legend(loc=\"upper right\")\n",
+    "                    axs[0, i_mic].set_title(f\"mic{i_mic}\")\n",
+    "\n",
+    "            # treat measured data\n",
     "            for i_mic in range(f_slice.shape[0]):\n",
-    "                axs[0, i_mic].plot(\n",
-    "                    freqs, \n",
-    "                    f_slice[i_mic], \n",
-    "                    label=\"measured\",\n",
-    "                    color=f\"C{plot_idx}\"\n",
+    "                dists, proba, diff = inf_machine.do_inference(\n",
+    "                    mic_idx=i_mic, algorithm=algorithm, normalize=normalize, calibrate=True\n",
     "                )\n",
+    "                distance_estimators[\"measured\"].add_distribution(diff * 1e-2, proba, i_mic)\n",
+    "                if plot_raw:\n",
+    "                    inf_machine.plot(\n",
+    "                        i_mic,\n",
+    "                        ax=axs[1, i_mic],\n",
+    "                        label=\"measured\",\n",
+    "                        color=f\"C{plot_idx}\",\n",
+    "                        ls=linestyles[\"measured\"],\n",
+    "                        standardize=True,\n",
+    "                    )\n",
+    "                    axs[2, i_mic].plot(\n",
+    "                        dists,\n",
+    "                        eps_normalize(proba, eps),\n",
+    "                        label=keys[\"measured\"],\n",
+    "                        ls=linestyles[\"measured\"],\n",
+    "                        color=f\"C{plot_idx}\",\n",
+    "                    )\n",
+    "\n",
+    "            # treat theorectical data\n",
+    "            f_theo = get_freq_slice_theory(\n",
+    "                freqs, distance_cm=distance_cm, azimuth_deg=azimuth_deg\n",
+    "            ).T  # n_mics x n_freqs\n",
+    "            inf_machine.add_data(f_theo, freqs)\n",
+    "            for i_mic in range(f_theo.shape[0]):\n",
+    "                dists_theo, proba_theo, diff_theo = inf_machine.do_inference(\n",
+    "                    mic_idx=i_mic,\n",
+    "                    algorithm=algorithm,\n",
+    "                    normalize=normalize,\n",
+    "                    calibrate=False,\n",
+    "                )\n",
+    "                distance_estimators[\"theo\"].add_distribution(\n",
+    "                    diff_theo * 1e-2, proba_theo, i_mic\n",
+    "                )\n",
+    "                if plot_raw:\n",
+    "                    inf_machine.plot(\n",
+    "                        i_mic,\n",
+    "                        ax=axs[1, i_mic],     label=keys[\"theo\"],\n",
+    "                        color=colors[\"theo\"],\n",
+    "                        ls=linestyles[\"theo\"],\n",
+    "                        standardize=True,\n",
+    "                    )\n",
+    "                    axs[2, i_mic].plot(\n",
+    "                        dists_theo,\n",
+    "                        eps_normalize(proba_theo, eps=eps),\n",
+    "                        label=keys[\"theo\"],\n",
+    "                        ls=linestyles[\"theo\"],\n",
+    "                        color=colors[\"theo\"],\n",
+    "                    )\n",
+    "\n",
+    "            for key, distance_estimator in distance_estimators.items():\n",
+    "                if key == \"theo\":\n",
+    "                    continue\n",
+    "                (\n",
+    "                    distance_total,\n",
+    "                    proba_total,\n",
+    "                ) = distance_estimator.get_distance_distribution(\n",
+    "                    method=method, chosen_mics=chosen_mics, azimuth_deg=azimuth_deg\n",
+    "                )\n",
+    "\n",
+    "                axs_all[plot_idx].plot(\n",
+    "                    distance_total * 1e2,\n",
+    "                    eps_normalize(proba_total, eps),\n",
+    "                    label=keys[key],\n",
+    "                    ls=linestyles[key],\n",
+    "                    color=f\"C{plot_idx}\",\n",
+    "                )\n",
+    "                axs_all[plot_idx].set_title(f\"{distance_cm:.0f}cm\")\n",
+    "\n",
+    "                d = get_estimate(distance_total * 1e2, proba_total)\n",
+    "\n",
+    "            axs_all[plot_idx].axvline(distance_cm, color=\"k\", ls=\":\", label=\"mean distance\")\n",
+    "            axs_all[plot_idx].set_yscale(\"log\")\n",
+    "\n",
+    "            if plot_raw:\n",
     "                axs[0, i_mic].legend(loc=\"upper right\")\n",
-    "                axs[0, i_mic].set_title(f\"mic{i_mic}\")\n",
-    "\n",
-    "        # treat measured data\n",
-    "        for i_mic in range(f_slice.shape[0]):\n",
-    "            dists, proba, diff = inf_machine.do_inference(\n",
-    "                mic_idx=i_mic, algorithm=algorithm, normalize=normalize, calibrate=True\n",
-    "            )\n",
-    "            distance_estimators[\"measured\"].add_distribution(diff * 1e-2, proba, i_mic)\n",
-    "            if plot_raw:\n",
-    "                inf_machine.plot(\n",
-    "                    i_mic,\n",
-    "                    ax=axs[1, i_mic],\n",
-    "                    label=\"measured\",\n",
-    "                    color=f\"C{plot_idx}\",\n",
-    "                    ls=linestyles[\"measured\"],\n",
-    "                    standardize=True,\n",
-    "                )\n",
-    "                axs[2, i_mic].plot(\n",
-    "                    dists,\n",
-    "                    eps_normalize(proba, eps),\n",
-    "                    label=keys[\"measured\"],\n",
-    "                    ls=linestyles[\"measured\"],\n",
-    "                    color=f\"C{plot_idx}\",\n",
-    "                )\n",
-    "\n",
-    "        # treat theorectical data\n",
-    "        f_theo = get_freq_slice_theory(\n",
-    "            freqs, distance_cm=distance_cm, azimuth_deg=azimuth_deg\n",
-    "        ).T  # n_mics x n_freqs\n",
-    "        inf_machine.add_data(f_theo, freqs)\n",
-    "        for i_mic in range(f_theo.shape[0]):\n",
-    "            dists_theo, proba_theo, diff_theo = inf_machine.do_inference(\n",
-    "                mic_idx=i_mic,\n",
-    "                algorithm=algorithm,\n",
-    "                normalize=normalize,\n",
-    "                calibrate=False,\n",
-    "            )\n",
-    "            distance_estimators[\"theo\"].add_distribution(\n",
-    "                diff_theo * 1e-2, proba_theo, i_mic\n",
-    "            )\n",
-    "            if plot_raw:\n",
-    "                inf_machine.plot(\n",
-    "                    i_mic,\n",
-    "                    ax=axs[1, i_mic],\n",
-    "                    label=keys[\"theo\"],\n",
-    "                    color=colors[\"theo\"],\n",
-    "                    ls=linestyles[\"theo\"],\n",
-    "                    standardize=True,\n",
-    "                )\n",
-    "                axs[2, i_mic].plot(\n",
-    "                    dists_theo,\n",
-    "                    eps_normalize(proba_theo, eps=eps),\n",
-    "                    label=keys[\"theo\"],\n",
-    "                    ls=linestyles[\"theo\"],\n",
-    "                    color=colors[\"theo\"],\n",
-    "                )\n",
-    "\n",
-    "        for key, distance_estimator in distance_estimators.items():\n",
-    "            if key == \"theo\":\n",
-    "                continue\n",
-    "            (\n",
-    "                distance_total,\n",
-    "                proba_total,\n",
-    "            ) = distance_estimator.get_distance_distribution(\n",
-    "                method=method, chosen_mics=chosen_mics, azimuth_deg=azimuth_deg\n",
-    "            )\n",
-    "\n",
-    "            axs_all[plot_idx].plot(\n",
-    "                distance_total * 1e2,\n",
-    "                eps_normalize(proba_total, eps),\n",
-    "                label=keys[key],\n",
-    "                ls=linestyles[key],\n",
-    "                color=f\"C{plot_idx}\",\n",
-    "            )\n",
-    "\n",
-    "            d = get_estimate(distance_total * 1e2, proba_total)\n",
-    "\n",
-    "        axs_all[plot_idx].axvline(distance_cm, color=\"k\", ls=\":\", label=\"mean distance\")\n",
-    "        axs_all[plot_idx].set_yscale(\"log\")\n",
-    "\n",
-    "        if plot_raw:\n",
-    "            axs[0, i_mic].legend(loc=\"upper right\")\n",
-    "            axs[1, i_mic].legend(loc=\"upper right\")\n",
-    "            axs[2, i_mic].legend(loc=\"upper right\")\n",
-    "\n",
-    "# sort subplots according to distance\n",
-    "print(axs_all.shape)\n",
-    "axs_all = change_order(axs_all, mean_distances[flying_time_indices])\n",
-    "axs_res = change_order(axs_res, mean_distances[flying_time_indices], ylabel=\"frequency [Hz]\", title=False)\n",
-    "\n",
-    "save_fig(fig_df, f\"plots/experiments/{exp_name}_df.png\")  # , extension=\"png\")\n",
-    "save_fig(\n",
-    "    fig_all, f\"plots/experiments/{exp_name}_mics{chosen_mics}_all.png\"\n",
-    ")  # , extension=\"png\")\n",
-    "save_fig(\n",
-    "    fig_res, f\"plots/experiments/{exp_name}_mics{chosen_mics}_res.png\"\n",
-    ")  # , extension=\"png\")"
+    "                axs[1, i_mic].legend(loc=\"upper right\")\n",
+    "                axs[2, i_mic].legend(loc=\"upper right\")\n",
+    "        # sort subplots according to distance\n",
+    "        axs_all = change_order(axs_all, mean_distances[flying_time_indices])\n",
+    "        save_fig(\n",
+    "            fig_all, f\"plots/experiments/{exp_name}_mics{chosen_mics}_appendix{row.appendix}.png\"\n",
+    "        )  # , extension=\"png\")\n",
+    "    save_fig(fig_df, f\"plots/experiments/{exp_name}_df_appendix{row.appendix}.png\")  # , extension=\"png\")"
    ]
   },
   {
