--- a/python/FlyingAnalysis.ipynb
+++ b/python/FlyingAnalysis.ipynb
@@ -667,8 +667,9 @@
     "kwargs = kwargs_datasets[exp_name][\"audio_deck\"]\n",
     "azimuth_deg = WALL_ANGLE_DEG\n",
     "\n",
-    "plot_distance_cm = 50\n",
-    "distance_range = [7, plot_distance_cm]\n",
+    "max_distance_cm = 50\n",
+    "min_distance_cm = 7\n",
+    "distance_range = [min_distance_cm, max_distance_cm]\n",
     "freq_range = [kwargs[\"min_freq\"], kwargs[\"max_freq\"]]\n",
     "inf_machine.add_geometry(distance_range, azimuth_deg)"
    ]
@@ -707,12 +708,13 @@
     "for i_row, row in df_total.iterrows():\n",
     "#row = df_total.loc[df_total.appendix == \"_18\"].iloc[0]\n",
     "\n",
-    "    fig_df, ax_df = plot_df([7, plot_distance_cm])\n",
+    "    fig_df, ax_df = plot_df([7, max_distance_cm])\n",
     "\n",
     "    mean_distances = starting_distance - row.positions[:, 1] * 1e2\n",
     "    flying_time_indices = np.where(\n",
-    "        (row.positions[:, 2] * 1e2 > MIN_Z_CM) & (mean_distances < plot_distance_cm)\n",
+    "        (row.positions[:, 2] * 1e2 > MIN_Z_CM) & (mean_distances < max_distance_cm)\n",
     "        & np.r_[1, mean_distances[:-1] - mean_distances[1:] > 0]\n",
+    "        & (mean_distances > min_distance_cm)\n",
     "    )[0]\n",
     "\n",
     "    for chosen_mics in [None]:#, [0], [2], [1, 3], [0, 1], [0, 3], [0, 1, 3]]:\n",
@@ -739,6 +741,8 @@
     "            (f_slice, freqs, stds, distances,) = data_collector.get_current_frequency_slice(\n",
     "                verbose=False\n",
     "            )\n",
+    "            #print(stds)\n",
+    "            stds = None\n",
     "\n",
     "            inf_machine.add_data(deepcopy(f_slice), freqs, stds)\n",
     "            inf_machine.filter_out_freqs()\n",
@@ -859,6 +863,7 @@
     "        save_fig(\n",
     "            fig_all, f\"plots/experiments/{exp_name}_mics{chosen_mics}_appendix{row.appendix}.png\"\n",
     "        )  # , extension=\"png\")\n",
+    "    ax_df.set_title(f'appendix{row.appendix}')\n",
     "    save_fig(fig_df, f\"plots/experiments/{exp_name}_df_appendix{row.appendix}.png\")  # , extension=\"png\")"
    ]
   },
