Add results with mvdr

--- a/python/DynamicStudy.ipynb
+++ b/python/DynamicStudy.ipynb
@@ -243,9 +243,7 @@
     "    if method == \"das\":\n",
     "        spectrum = beam_former.get_das_spectrum(R, np.array([frequency_hz]))\n",
     "    else:\n",
-    "        spectrum = beam_former.get_mvdr_spectrum(\n",
-    "            R, np.array([frequency_hz]), inverse=\"pinv\"\n",
-    "        )\n",
+    "        spectrum = beam_former.get_mvdr_spectrum(R, np.array([frequency_hz]))\n",
     "    spectrum = (spectrum - np.min(spectrum)) / (np.max(spectrum) - np.min(spectrum))\n",
     "    spectrum[spectrum < 1e-10] = 1e-10\n",
     "    angles = BeamFormer.theta_scan\n",
@@ -305,9 +303,8 @@
     "source_distance = 20\n",
     "time_index = int(2 * source_distance * SPEED_OF_SOUND // FS)\n",
     "freqs = np.fft.rfftfreq(N_BUFFER, 1 / FS)\n",
-    "method = \"das\"\n",
-    "log = False\n",
-    "# method = \"mvdr\"; log=True\n",
+    "#method = \"das\"; log = False\n",
+    "method = \"mvdr\"; log=True\n",
     "dir_name = \"plots_doa/theory\"\n",
     "\n",
     "freq_index = np.argmin(np.abs(freqs - frequency_desired))\n",
@@ -607,9 +604,8 @@
     "time_index = int(2 * source_distance * SPEED_OF_SOUND // FS)\n",
     "\n",
     "freqs = np.fft.rfftfreq(N_BUFFER, 1 / FS)\n",
-    "method = \"das\"\n",
-    "log = False\n",
-    "# method = \"mvdr\"; log=True\n",
+    "#method = \"das\"; log = False\n",
+    "method = \"mvdr\"; log=True\n",
     "dir_name = \"plots_doa/simulation\"\n",
     "\n",
     "freq_index = np.argmin(np.abs(freqs - frequency_desired))\n",
@@ -799,7 +795,6 @@
     "            spectrum = beam_former.get_mvdr_spectrum(\n",
     "                R, np.array([frequency_hz]), inverse=\"pinv\"\n",
     "            )\n",
-    "\n",
     "        if plot:\n",
     "\n",
     "            if plot_covariance:\n",
@@ -809,8 +804,11 @@
     "\n",
     "            fig = plt.figure()\n",
     "            fig.set_size_inches(3, 3)\n",
-    "            plot_spectrum(spectrum, polar, title=f\"drone rotation {degree}deg\")\n",
-    "\n",
+    "            \n",
+    "            if log:\n",
+    "                plot_spectrum(np.log10(spectrum), polar, title=f\"drone rotation {degree}deg\")\n",
+    "            else:\n",
+    "                plot_spectrum(spectrum, polar, title=f\"drone rotation {degree}deg\")\n",
     "\n",
     "separate_doa(plot=True)"
    ]
@@ -835,8 +833,10 @@
     "    frequencies = np.array([frequency_hz])\n",
     "\n",
     "    if method == \"das\":\n",
+    "        print(\"using das\")\n",
     "        spectrum_multimic = beam_former.get_das_spectrum(R_multimic, frequencies)\n",
     "    else:\n",
+    "        print(\"using mvdr\")\n",
     "        spectrum_multimic = beam_former.get_mvdr_spectrum(R_multimic, frequencies)\n",
     "\n",
     "    if plot:\n",
@@ -846,9 +846,15 @@
     "\n",
     "        fig = plt.figure()\n",
     "        fig.set_size_inches(3, 3)\n",
-    "        plot_spectrum(\n",
-    "            spectrum_multimic, polar, title=f\"{mics_array.shape[0]}-microphone array\"\n",
-    "        )\n",
+    "        \n",
+    "        if log:\n",
+    "            plot_spectrum(\n",
+    "                np.log10(spectrum_multimic), polar, title=f\"{mics_array.shape[0]}-microphone array\"\n",
+    "            )\n",
+    "        else:\n",
+    "            plot_spectrum(\n",
+    "                spectrum_multimic, polar, title=f\"{mics_array.shape[0]}-microphone array\"\n",
+    "            )\n",
     "        save_fig(fig, f\"{dir_name}/multimic{extension}\")\n",
     "\n",
     "\n",
@@ -869,6 +875,7 @@
    "outputs": [],
    "source": [
     "def kinetic_doa(plot=False, polar=True, extension=\".pdf\"):\n",
+    "    print(\"using\", method)\n",
     "    frequencies = np.array([frequency_hz])\n",
     "\n",
     "    beam_former = BeamFormer(mic_positions=mics_drone)\n",
@@ -891,8 +898,13 @@
     "        )\n",
     "\n",
     "        if plot:\n",
-    "            plot_spectrum(spec, polar, title=\"raw spectra\")\n",
+    "            \n",
+    "            if log:\n",
+    "                plot_spectrum(np.log10(spec), polar, title=\"raw spectra\")\n",
+    "            else:\n",
+    "                plot_spectrum(spec, polar, title=\"raw spectra\")\n",
     "\n",
+    "                \n",
     "    spectrum_dynamic = beam_former.get_dynamic_estimate()\n",
     "    spectrum_delayed = beam_former.get_multi_estimate(method=method)\n",
     "\n",
@@ -901,12 +913,18 @@
     "\n",
     "        fig = plt.figure()\n",
     "        fig.set_size_inches(3, 3)\n",
-    "        plot_spectrum(spectrum_dynamic, polar, title=\"angle shift\")\n",
+    "        if log:\n",
+    "            plot_spectrum(np.log10(spectrum_dynamic), polar, title=\"angle shift\")\n",
+    "        else:\n",
+    "            plot_spectrum(spectrum_dynamic, polar, title=\"angle shift\")\n",
     "        save_fig(fig, f\"{dir_name}/angle{extension}\")\n",
     "\n",
     "        fig = plt.figure()\n",
     "        fig.set_size_inches(3, 3)\n",
-    "        plot_spectrum(spectrum_delayed, polar, title=\"time shift\")\n",
+    "        if log:\n",
+    "            plot_spectrum(np.log10(spectrum_delayed), polar, title=\"time shift\")\n",
+    "        else: \n",
+    "            plot_spectrum(spectrum_delayed, polar, title=\"time shift\")\n",
     "        save_fig(fig, f\"{dir_name}/time{extension}\")\n",
     "\n",
     "\n",
@@ -927,7 +945,6 @@
    "outputs": [],
    "source": [
     "polar = True\n",
-    "method = \"das\"\n",
     "source_type = \"many\"  # \"close\"\n",
     "\n",
     "if source_type == \"close\":\n",
@@ -969,7 +986,7 @@
    "source": [
     "gt_angles_rad = [a / 180 * np.pi for a in [50]]\n",
     "degrees = [0, 20, 40] #[30, 60, 90]\n",
-    "movement = 1e-1  # time delay breaks down for 1e-1!\n",
+    "movement = 1e-2  # time delay breaks down for 1e-1!\n",
     "lateral_movement = movement * np.arange(len(degrees))  # in m\n",
     "\n",
     "sources = []\n",
